--- a/debian/control.in
+++ b/debian/control.in
@@ -7,7 +7,7 @@ Standards-Version: 3.8.0
 
 Package: debathena-bugme
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-gtk2, python-glade2
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-gtk2, python-glade2, debathena-machtype (>= 10.0.2-0debathena1~)
 Description: Display a timer for Athena Quickstations
  Athena quickstations are designed for short-term login sessions.  This
  time limit is enforced by a timer in the top left corner of the workstation
