In athdir:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In athinfo:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In athrun:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In attach:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In attachandrun:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In authwatch:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In bugme:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In delete:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In dent:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In desync:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In discuss:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In finger:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In gathlogout:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In gathrun:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In get_message:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In grenew:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump 

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: debathena-bugme
 Section: debathena/base
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@
-Standards-Version: 3.8.0
+Build-Depends: cdbs, debhelper, dh-buildinfo
+Standards-Version: 3.9.3
 
 Package: debathena-bugme
 Architecture: all
